--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mwedittypes = "2.0.2"
 sentence-transformers = "2.2.2"
 transformers = "4.25.1"
 torch = "1.13.1"
+langchain = "0.0.166"
 
 [tool.poetry.group.lint.dependencies]
 isort = "^5.12.0"
