--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ sentence-transformers = "2.2.2"
 transformers = "4.25.1"
 torch = "1.13.1"
 langchain = "0.0.166"
+streamlit = "1.10.0"
+altair = "4"
 
 [tool.poetry.group.lint.dependencies]
 isort = "^5.12.0"
